--- a/infra/docker/apache/httpd.conf
+++ b/infra/docker/apache/httpd.conf
@@ -1,12 +1,11 @@
 <VirtualHost *:80>
-    ServerName example.com
-    ServerAdmin webmaster@localhost
-    DocumentRoot /work/backend/public
+    ServerName match_candy
+    DocumentRoot /var/www/html/public/
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    <Directory /work/backend/public>
+    <Directory /var/www/html>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
