--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -6,10 +6,12 @@ COPY --from=composer:2.0 /usr/bin/composer /usr/bin/composer
 
 RUN  apt-get update && \
      apt-get install -y git unzip libzip-dev libonig-dev && \
-     apt-get install -y libicu-dev && \
+     apt-get install -y libicu-dev libpng-dev && \
      docker-php-ext-install intl pdo_mysql zip bcmath && \
+     docker-php-ext-install gd  && \
      cd /etc/apache2/mods-enabled && \
      ln -s ../mods-available/rewrite.load
+     
 
 COPY ./infra/docker/php/php.ini /usr/local/etc/php/php.ini
 COPY ./infra/docker/apache/httpd.conf /etc/apache2/sites-available/000-default.conf
