--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "1.x"
+        "laravel/ui": "1.x",
+        "paquettg/php-html-parser": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
