検索機能実装中:結果画面にamazonのlandingImageを表示

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=818c1533726f9d2a9810",
+    "/css/app.css": "/css/app.css?id=401667f320a6421b2b39"
 }
